--- a/navigation.css
+++ b/navigation.css
@@ -59,10 +59,12 @@
 
 #menu_bar {
     display: inline-block;
+    position: absolute;
+    width: 110px;
     height: 25px;  
     float: right;
     margin-top: 10px;
-    margin-left: 10px;
+    margin-left: 450px;
     margin-right: 10px;
     word-spacing: 10px;
     padding: 0 5px 0 4px;
@@ -72,6 +74,8 @@
 
 #friend_request_menu_bar {
     display:inline-block;
+    position: absolute;
+    margin-left: 5px;
     height: 25px;
     width: 25px;
     background-image: url(./Images/baseline-people-24px.svg);
@@ -84,6 +88,8 @@
 
 #messages_menu_bar {
     display:inline-block;
+    position: absolute;
+    margin-left: 45px;
     height: 25px;
     width: 25px;
     background-image: url(./Images/baseline-sms-24px.svg);
@@ -96,6 +102,8 @@
 
 #notifications_menu_bar {
     display:inline-block;
+    position: absolute;
+    margin-left: 85px;
     height: 25px;
     width: 25px;
     background-image: url(./Images/baseline-notifications-24px.svg);
@@ -109,6 +117,8 @@
 #more_menu_bar {
     display: inline-block;
     height: 25px; 
+    position: absolute;
+    margin-left: 260px;
     float: right;
     margin-top: 10px;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -121,6 +131,7 @@
 
 #name_menu_bar {
     display:inline-block;
+    position: absolute;
     width: 45px;
     border-radius: 2px;
     text-align: center;
@@ -134,6 +145,8 @@
 
 #home_menu_bar {
     display:inline-block;
+    position: absolute;
+    margin-left: 50px;
     width: 65px;
     border-radius: 2px;
     text-align: center;
@@ -143,12 +156,13 @@
 
 #home_menu_bar:hover {
     cursor: pointer;
-    
     background-color:rgb(42, 69, 128);
 }
 
 #create_menu_bar {
+    position: absolute;
     display:inline-block;
+    margin-left: 125px;
     width: 45px;
     border-radius: 2px;
     text-align: center;
